# parallel-image-processing

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
benchmark/: benchmark.sh  graph.py
data/: effects.txt
include/: image.hpp  scheduler.hpp  util.hpp
src/: editor.cpp  image.cpp  scheduler.cpp  util.cpp
